# gemvault

./: .gitignore  CHANGELOG.md  GETTING-STARTED.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml
backend/src/assay/: config.py  main.py
backend/src/assay/adapters/api/: dependencies.py  errors.py  router.py  schemas.py
backend/src/assay/adapters/auth/: __init__.py  jwt_provider.py  passwords.py
backend/src/assay/adapters/chain/: __init__.py  base_client.py  stub_client.py
backend/src/assay/adapters/persistence/: __init__.py  event_store.py  models.py
backend/src/assay/adapters/persistence/migrations/: env.py
backend/src/assay/adapters/persistence/migrations/versions/: 0001_initial.py
backend/src/assay/adapters/persistence/repositories/: escrow_repo.py  user_repo.py
backend/src/assay/application/: __init__.py  use_cases.py
backend/src/assay/domain/: __init__.py  asset.py  user.py  value_objects.py
backend/src/gemvault/: config.py  main.py
backend/src/gemvault/adapters/api/: __init__.py  dependencies.py  errors.py  router.py  schemas.py
backend/src/gemvault/adapters/chain/: __init__.py
backend/src/gemvault/adapters/persistence/: database.py  event_store.py  models.py
backend/src/gemvault/adapters/persistence/migrations/: env.py
backend/src/gemvault/adapters/persistence/migrations/versions/: 0001_initial.py
backend/src/gemvault/adapters/persistence/repositories/: __init__.py  escrow_repo.py  user_repo.py
backend/src/gemvault/adapters/webhook/: __init__.py  hmac_verifier.py
backend/src/gemvault/application/: use_cases.py
backend/src/gemvault/domain/: asset.py  certificate.py  errors.py  escrow.py  events.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/adapters/api/: conftest.py  test_happy_path.py
backend/tests/adapters/chain/: test_base_client.py
backend/tests/adapters/persistence/: conftest.py  test_event_store.py  test_repositories.py
backend/tests/domain/: conftest.py  test_asset.py  test_escrow.py  test_events.py  test_user.py  test_value_objects.py
contracts/: .gitignore  README.md  foundry.toml
docs/: ARCHITECTURE.md  DEPLOY.md  PIVOT-NOTE.md  PRD-ASSAY.md  PRD-GEMVAULT.md  openapi.yaml
(+38 files in other folders)
